# nemocore

./: CMakeLists.txt  COPYING  README.md  REAME.md  install-build-deps.sh  manifest.json
action/: CMakeLists.txt  actionone.c  actionone.h  actiontap.c  actiontap.h  nemoaction.c  nemoaction.h  nemoaction.pc.in
apps/: CMakeLists.txt  glibhelper.c  glibhelper.h  gsthelper.c  gsthelper.h  meshhelper.cpp  meshhelper.h  messages.c  nemoapps.pc.in  nemocurl.c  nemoenvs.c  nemoenvs.h  nemoexec.c  nemoglib.h  nemograb.c  nemograb.h  nemogrilo.c  nemoimage.c  nemoimage.cpp  nemolog.c  nemomesh.cpp  nemopdf.c  nemoplay.c  nemopulse.c  nemotouch.cpp  nemovideo.c  pdfhelper.c  pdfhelper.h  pulsehelper.c  pulsehelper.h  showhelper.c  showhelper.h  talehelper.c  talehelper.h
asst/: CMakeLists.txt  nemoasst.pc.in  nemoattr.h  nemobook.h  nemobox.h  nemoclip.c  nemoclip.h  nemoconfig.h  nemodick.c  nemodick.h  nemoease.h  nemofs.c  nemofs.h  nemohash.c  nemohash.h  nemohelper.h  nemoitem.c  nemoitem.h  nemojson.c  nemojson.h  nemokeys.c  nemokeys.h  nemolist.h  nemolistener.h  nemolog.c  nemolog.h  nemomatrix.c  nemomatrix.h  nemomemo.c  nemomemo.h  nemometro.c  nemometro.h  nemomisc.c  nemomisc.h  nemomsg.c  nemomsg.h  nemomsg.pc.in  nemonote.c  nemonote.h  nemonoty.c  (+27 more)
backs/: CMakeLists.txt  miniback.c  miroback.c  mosiback.cpp  moteback.cpp  playback.c  plexback.cpp
bus/: CMakeLists.txt  nemobus.c  nemobus.h  nemobus.pc.in  nemobusc.c  nemobusd.c
compz/: CMakeLists.txt  actor.c  actor.h  animation.c  animation.h  backend.c  backend.h  binding.c  binding.h  canvas.c  canvas.h  clipboard.c  clipboard.h  compz.c  compz.h  content.c  content.h  datadevice.c  datadevice.h  datadrag.c  datadrag.h  dataoffer.c  dataoffer.h  dataselection.c  dataselection.h  dbushelper.c  dbushelper.h  drmbackend.c  drmbackend.h  drmnode.c  drmnode.h  effect.h  evdevbackend.c  evdevbackend.h  evdevnode.c  evdevnode.h  event.c  event.h  eventqueue.c  eventqueue.h  (+101 more)
cook/: CMakeLists.txt  cookcamera.c  cookcamera.h  cookegl.c  cookegl.h  cookfbo.c  cookfbo.h  cookone.c  cookone.h  cookpoly.c  cookpoly.h  cookrenderer.c  cookrenderer.h  cookshader.c  cookshader.h  cookstate.c  cookstate.h  cooktex.c  cooktex.h  cooktrans.c  cooktrans.h  nemocook.c  nemocook.h  nemocook.pc.in
db/: CMakeLists.txt  nemodb.c  nemodb.h  nemodb.pc.in
envs/: CMakeLists.txt  bindings.c  configs-item.c  configs-json.c  configs.c  messages.c  nemoapps.c  nemoapps.h  nemobeat.c  nemobeat.h  nemocursor.cpp  nemocursor.h  nemoenvs.c  nemoenvs.h  nemoenvs.pc.in  nemograb.c  nemograb.h  nemomirror.c  nemomirror.h  nemopack.c  nemopack.h  nemopad.c  nemopad.h  nemospeaker.c  nemospeaker.h  nemoxapp.c  nemoxapp.h  showhelper.c  showhelper.h  skiahelper.hpp  talehelper.c  talehelper.h  themes-json.c
fx/: CMakeLists.txt  fxnoise.cpp  fxnoise.h  fxsph.c  fxsph.h  glblur.c  glblur.h  glcolor.c  glcolor.h  glfilter.c  glfilter.h  gllight.c  gllight.h  glmask.c  glmask.h  glmotion.c  glmotion.h  glpolar.c  glpolar.h  glripple.c  glripple.h  glshadow.c  glshadow.h  glsweep.c  glsweep.h  glswirl.c  glswirl.h  nemofx.pc.in
games/: CMakeLists.txt  nemomine.cpp  showhelper.c  showhelper.h
gstsink/: CMakeLists.txt  gstminibufferpool.c  gstminibufferpool.h  gstminisink.c  gstminisink.h  gstnemobufferpool.c  gstnemobufferpool.h  gstnemosink.c  gstnemosink.h  gstnemosubsink.c  gstnemosubsink.h
helper/: CMakeLists.txt  bezierhelper.c  bezierhelper.h  cliphelper.c  codehelper.h  colorhelper.c  colorhelper.h  compzhelper.h  fbhelper.c  fbhelper.h  fonthelper.c  fonthelper.h  glhelper.c  glhelper.h  keycodehelper.c  keycodehelper.h  namespacehelper.c  namespacehelper.h  nemohelper.h  nemohelper.pc.in  pixmanhelper.c  pixmanhelper.h  polyhelper.c  polyhelper.h  stringhelper.c  stringhelper.h  syshelper.c  ttyhelper.c  ttyhelper.h  udphelper.h  utf8helper.c
kits/: CMakeLists.txt  nemobus.c  nemobus.h  nemochannel.c  nemochannel.h  nemodb.c  nemodb.h  nemojson.c  nemojson.h  nemokits.pc.in  nemoqueue.c  nemoqueue.h  nemothread.c  nemothread.h  nemoxml.c  nemoxml.h
mosi/: CMakeLists.txt  mosicross.c  mosicross.h  mosiflip.c  mosiflip.h  mosioneshot.c  mosioneshot.h  mosirain.c  mosirain.h  mosirandom.c  mosirandom.h  mosiwave.c  mosiwave.h  nemomosi.c  nemomosi.h  nemomosi.pc.in
mote/: CMakeLists.txt  nemomote.c  nemomote.h  nemomote.pc.in  nemozone.c  nemozone.h
motz/: CMakeLists.txt  motzburst.c  motzburst.h  motzclip.c  motzclip.h  motzgroup.c  motzgroup.h  motzobject.c  motzobject.h  motzpath.c  motzpath.h  motzswirl.c  motzswirl.h  motztrans.c  motztrans.h  motztransition.c  motztransition.h  nemomotz.c  nemomotz.h  nemomotz.pc.in
msg/: CMakeLists.txt  msgconn.c  msgconn.h  msgqueue.c  msgqueue.h  nemomsg.c  nemomsg.h
navi/: CMakeLists.txt  naviapp.cpp  naviapp.hpp  naviclient.cpp  naviclient.hpp  navihandler.cpp  navihandler.hpp  navikey.c  navikey.h  nemonavi.c  nemonavi.cpp  nemonavi.h  nemonavi.hpp  nemonavi.pc.in
pixs/: CMakeLists.txt  nemopixs.c  nemopixs.h
play/: CMakeLists.txt  ffmpegconfig.h  nemoplay.c  nemoplay.h  nemoplay.pc.in  playback.c  playback.h  playbox.c  playbox.h  playclock.c  playclock.h  playmisc.c  playmisc.h  playqueue.c  playqueue.h  playshader.c  playshader.h
shell/: CMakeLists.txt  busycursor.c  busycursor.h  catch.c  catch.h  grab.c  grab.h  inputpanel.c  inputpanel.h  message.c  message.h  move.c  move.h  nemoclient.c  nemoclient.h  nemoshell.c  nemoshell.h  nemoshell.pc.in  pick.c  pick.h  plugin.c  plugin.h  resize.c  resize.h  shell.c  shell.h  viewanimation.c  viewanimation.h  vieweffect.c  vieweffect.h  waylandshell.c  waylandshell.h  xdgshell.c  xdgshell.h
show/: CMakeLists.txt  nemoshow.c  nemoshow.cpp  nemoshow.h  nemoshow.pc.in  showblur.cpp  showblur.h  showblur.hpp  showcamera.cpp  showcamera.h  showcamera.hpp  showcanvas.c  showcanvas.cpp  showcanvas.h  showcanvas.hpp  showcolor.c  showcolor.cpp  showcolor.h  showcons.cpp  showcons.h  showease.cpp  showease.h  showeasy.cpp  showeasy.h  showevent.c  showevent.h  showexpr.cpp  showexpr.h  showexpr.hpp  showfilter.cpp  showfilter.h  showfont.cpp  (+56 more)
(+396 files in other folders)
