FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(LIBMONGOC REQUIRED libmongoc-1.0)
INCLUDE_DIRECTORIES(${LIBMONGOC_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBMONGOC_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBBSON REQUIRED libbson-1.0)
INCLUDE_DIRECTORIES(${LIBBSON_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBBSON_LIBRARY_DIRS})

include_directories(
	${CMAKE_SOURCE_DIR}/asst
	${CMAKE_SOURCE_DIR}/helper
	)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

add_library(nemodb SHARED
	nemodb.c
	)

TARGET_LINK_LIBRARIES(nemodb
	nemoasst
	nemohelper
	${LIBMONGOC_LIBRARIES}
	${LIBBSON_LIBRARIES}
	)

INSTALL(TARGETS nemodb DESTINATION lib${CMAKE_LIBRARY_SUFFIX})

set(HEADER_FILES
	${CMAKE_SOURCE_DIR}/db/nemodb.h
	)

set(NEMOBUS_PKGCONFIG_REQUIRES "nemoasst nemohelper libmongoc-1.0 libbson-1.0")

configure_file(
	nemodb.pc.in
	nemodb.pc
	@ONLY
	)

INSTALL(FILES ${HEADER_FILES} DESTINATION include/nemodb)
INSTALL(FILES ${CMAKE_BINARY_DIR}/db/nemodb.pc DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/pkgconfig)
